Added .xinitrc and fixed kitty

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -114,7 +114,7 @@ set -g set-titles on
 set -g set-titles-string "#T"
 
 # Theme loading
-source ~/.config/tmux/theme.conf
+#source ~/.config/tmux/theme.conf
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
