Updated many programs

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,10 +1,10 @@
-font_family JetBrainsMono Nerd Font
+font_family JetBrainsMono
 font_size 13.0
-background_opacity 0.5
-
+background_opacity 0.98
+scrollback_lines -1
 
 
 # BEGIN_KITTY_THEME
-# kanagawabones
+# Gruvbox Material Dark Hard
 include current-theme.conf
 # END_KITTY_THEME
