--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -31,12 +31,12 @@ bind-key -n M-l select-pane -R
 
 unbind '"'
 unbind %
-bind-key -n M-h split-window -h -c "#{pane_current_path}" 
-bind-key -n M-v split-window -v -c "#{pane_current_path}" 
+bind-key -n M-v split-window -h -c "#{pane_current_path}" 
+bind-key -n M-h split-window -v -c "#{pane_current_path}" 
 
 # Moving window
-bind-key -n C-S-Left swap-window -t -1 \; previous-window
-bind-key -n C-S-Right swap-window -t +1 \; next-window
+bind-key -n M-Left swap-window -t -1 \; previous-window
+bind-key -n M-Right swap-window -t +1 \; next-window
 
 set -g base-index 1
 setw -g pane-base-index 1
